--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       </span>
     </div>
     <div class="footer-map">
-      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=c9c9c9&w=a&t=n&d=OX_lbVzLMI55QUv2faFEAPYipaEmJv7dZpEAAXxKYYo&co=ffffff&cmo=5b9bb5&cmn=fe944a'></script>
+      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=c9c9c9&w=200&t=n&d=OX_lbVzLMI55QUv2faFEAPYipaEmJv7dZpEAAXxKYYo&co=ffffff&cmo=5b9bb5&cmn=fe944a'></script>
     </div>
   </div>
 </footer>
